# project-template--python

./: .gitignore  Dockerfile  README.MD  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dev_(re)deploy.yml
docs/: README.MD
envs/: dev-docker.env  dev.env
scripts/: cmd.sh  run_docker.sh  test.sh
src/: main.py
tst/test_examples/: test_example.py
